bumped the client verion
